# STDO

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MVP FastAPI  README.md  TIME_CALCULATION_USAGE.md  WORK_SCHEDULE_ADMIN.md  alembic.ini  build_and_run_stdo.bat  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_stdo.bat  памятка по запуску.txt
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
api/: admin_api.py  auth_api.py  dashboard_api.py  document_api.py  gamification_api.py  import_api.py  internal_project_api.py  project_api.py  remarks_api.py  reports_api.py  revision_api.py  task_api.py  tender_api.py  users_api.py  vdr_mdr_api.py  workload_api.py
core/: auth.py  service_locator.py
db/: database.py  migrations_runner.py
dto/: auth.py  common.py  pagination.py  portfolio_today.py  revision.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  vite.config.ts
models/: __init__.py  combo_achievement.py  daily_quest.py  document.py  engineer_metric.py  enums.py  gamification_badge.py  gamification_event.py  notification.py  planned_task.py  project.py  remark.py  revision.py  task_dependency.py  time_log.py  user.py  vdr_mdr.py  work_schedule.py
project/: config.py  main.py
repositories/: __init__.py  combo_achievement_repository.py  daily_quest_repository.py  document_repository.py  gamification_badge_repository.py  gamification_event_repository.py  (+9 more)
(+75 files in other folders)
