[project]
name = "ДокПоток IRIS"
version = "0.1.0"
description = "Technical Documentation Management System with CPM Planning"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 88
exclude = '''
/(
  \.git
 | \.venv
 | build
 | dist
 | frontend
 | storage
 | __pycache__
)/
'''

[tool.ruff]
line-length = 88
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "frontend",
  "storage",
  "__pycache__",
]
